move to VectorUtil